--- a/src/components/Website.css
+++ b/src/components/Website.css
@@ -24,7 +24,7 @@
   .page-header{
     background-color: #000;
     color: #fff;
-    padding: 16px;
+    padding: 8px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     display: flex;
@@ -41,16 +41,41 @@
     height: 16px;
     margin-right: 8px;
   }
-  .add-btn{
-    background-color: #3b82f6;
+  .home-add-btn,.add-btn,.edit-btn,.delete-btn{
     color: #fff;
     border-radius: 30%;
-    width: 24px;
-    height: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    padding: 2px;
+  }
+  .add-edit-div{
+    display: flex;
+    padding: 3px;
+    align-items: center;
+    gap: 4px;
+    background-color: #3b82f6;
+    border-radius:8px;
+  }
+  .home-add-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3b82f6;
+    height: 18px;
+    width: 18px;
+    padding: 12px;
+    /* border-radius: 30%; */
+  }
+  .add-btn:hover{
+    background-color: #1621d8;
+  }
+  .edit-btn:hover{
+    background-color: #1621d8;
+  }
+  .delete-btn:hover{
+    background-color: #1621d8;
   }
   /* .page-content{
     background-color: #fff;
@@ -64,13 +89,17 @@
     height: max-content;
   } */
   .section{
-    padding: 8px;
+    padding: 10px;
     margin: 8px;
+    font-size: 12px;
+    font-weight: 500;
     border:1px solid #e5e5e5;
     border-radius: 4px;
+    cursor: pointer;
     /* border-bottom: 1px solid #e5e5e5; */
     transition: backgroun-color 0.2s;
   }
+
   .section:first-child,.section:last-child{
     background-color: #f5f5f7;
   }
@@ -89,6 +118,7 @@
     border: none;
     cursor: pointer;
     font-size: 14px;
+    z-index: 1;
   }
   .add-page-btn-icon{
     margin-right: 8px;
@@ -111,7 +141,7 @@
   .lower-page-header{
     background-color: #000;
     color: #fff;
-    padding: 12px;
+    padding: 6px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -123,3 +153,260 @@
     align-items: center;
     gap:8px;
   }
+
+
+  .sidebar {
+    position: absolute;
+    z-index: 5;
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    background: #fff;
+    box-shadow: 2px 3px 6px #0000001a;
+    border: 1px solid rgb(234, 234, 234);
+    border-radius: 8px;
+    padding: 16px 4px 0 16px;
+    width: 320px;
+    padding: 16px 4px 16px 16px;
+    box-sizing: border-box;
+    max-height: calc(100vh - 164px);
+    overflow-y: auto;
+  }
+
+  .sidebar::-webkit-scrollbar {
+    width: 6px;
+  }
+  
+  .sidebar::-webkit-scrollbar-thumb {
+    background: #bbb;
+    border-radius: 10px;
+  }
+  
+  .sidebar::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  .sidebar-title {
+    font-size: 12px;
+      font-weight: 800;
+      margin-bottom: 10px;
+  }
+  .sidebar-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    gap: 12px;
+    padding-right: 8px;
+  }
+  
+  .sidebar-section-item {
+
+    border: 1px solid #EAEAEA;
+    width: 288px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    gap: 12px;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  
+  }
+  .sidebar-section-item:hover {
+    background: #f9f9f9;
+  }
+  .sidebar-section-title {
+    font-size: 13px;
+    font-weight: 500;
+  }
+  .sidebar-section-description {
+    font-size: 12px;
+    color: gray;
+  }
+  .plus-icon-div {
+  
+    align-self: center;
+      border-radius: 40px;
+      background: #f5f5f7;
+      height: 18px;
+      width: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+  }
+  
+
+.side-drawer {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    /* height: 100%; */
+    /* width: 100%; */
+    max-width: 400px;
+    max-height: 500px;
+    background-color: #000;
+    border-radius: 8px;
+    color: #fff;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 10;
+    box-shadow: 0px 0 6px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    animation: slideIn 0.3s ease-in-out;
+  }
+  
+  .side-drawer.open {
+    transform: translateX(0);
+  }
+  
+  .side-drawer-header {
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #333;
+  }
+  
+  .side-drawer-content {
+    padding: 16px;
+    overflow-y: auto;
+    flex: 1;
+  }
+  
+  .close-btn {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .input-field,
+  .textarea-field {
+    width: 100%;
+    padding: 10px;
+    margin-top: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #444;
+    border-radius: 4px;
+    background-color: #111;
+    color: #fff;
+  }
+  
+  .remove-btn {
+    width: 100%;
+    padding: 10px;
+    background-color: #e53935;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+
+  .homePage::after{
+    content: "";
+    position: absolute;
+    left: 50%;
+    width: 2px;
+    height: 80px;
+    background: gray;
+    transform: translateX(-50%);
+  }
+
+  .lower-pages-container::before{
+    content: "";
+    position: absolute;
+    margin-top: -49px;
+    left: 50%;
+    /* width: 70%; */
+    height: 2px;
+    background: gray;
+    transform: translateX(-50%);
+  }
+.lower-pages-container.w-5::before{
+    width: 70%;
+}
+.lower-pages-container.w-4::before{
+    width: 52.7%;
+}
+.lower-pages-container.w-3::before{
+    width: 35%;
+}
+.lower-pages-container.w-2::before{
+    width: 17.6%;
+}
+.lower-pages-container.w-1::before{
+    width: 0%;
+}
+  .lower-page::before{
+    content: "";
+    position: absolute;
+    /* top: -68px; */
+    /* left: 50%; */
+    width: 2px;
+    margin-top: -49px;
+    margin-left: 125px;
+    height: 49px;
+    background: gray;
+    transform: translateX(-50%);
+  }
+
+  .popup-container {
+    position: fixed;
+    top:20px;
+    right: 20px;
+    width: 300px;
+    background: #111;
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    animation: slideIn 0.3s ease-in-out;
+  }
+  
+  .popup-content h3 {
+    font-size: 13px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    letter-spacing: 1px;
+  }
+  
+  .popup-content input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #444;
+    background: #222;
+    color: white;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    outline: none;
+  }
+  
+  .proceed-button {
+    width: 100%;
+    background: #1621d8;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  @keyframes slideIn {
+    from {
+      right: -350px;
+      opacity: 0;
+    }
+    to {
+      right: 20px;
+      opacity: 1;
+    }
+  }
+  
