--- a/src/components/Website.css
+++ b/src/components/Website.css
@@ -98,19 +98,24 @@
     border:1px solid #e5e5e5;
     border-radius: 4px;
     cursor: pointer;
-    /* position: relative; */
+    position: relative;
     /* border-bottom: 1px solid #e5e5e5; */
     transition: backgroun-color 0.2s;
   }
   
 
-  /* .section:hover {
-    border: 1px solid #4f46e5; 
+  .section:hover {
+    border: 1px solid #4f46e5; /* Blue border */
   }
   
+  .pencil-icon{
+    position: absolute;
+    right: 30px;
+    color: #1621d8;
+  
+  }
 
-  .section::after {
-    content: "+";
+  .hover-plus-icon{
     position: absolute;
     left: 0px;
     right: 0px;
@@ -131,10 +136,10 @@
   }
   
 
-  .section:hover::after {
+  .section:hover .hover-plus-icon {
     opacity: 1;
   }
-   */
+  
 
 
 
@@ -501,7 +506,9 @@
     position: absolute;
    cursor: grab;
   margin-right: 8px;
+  margin-top: 4px;
   right: 8px;
+  z-index: 10;
   }
   
    .section-content {
