--- a/src/components/Website.css
+++ b/src/components/Website.css
@@ -266,7 +266,7 @@
 
   .sidebar {
     position: absolute;
-    z-index: 5;
+    z-index: 20;
     position: fixed;
     right: 10px;
     top: 10px;
@@ -477,6 +477,14 @@
     border: none;
     padding: 10px;
     border-radius: 5px;
+    /* cursor: pointer; */
+  }
+.btn-disable{
+    opacity: 0.8;
+    cursor: not-allowed;
+  }
+.btn-enable{
+    opacity: 1;
     cursor: pointer;
   }
   
