Send json data via navigator

--- a/src/index.css
+++ b/src/index.css
@@ -181,11 +181,11 @@ textarea.input-control {
 	position: absolute;
 	width: 100%;
 	bottom: 0;
+	left: 0;
 }
 
 .footer-block .container {
 	width: 100%;
-	/* max-width: 1320px; */
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
