Feat: add sidebar for site's structure

--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@ textarea.input-control {
 	background: #dcdcde;
 	padding: 5px 20px;
 	border-radius: 25px;
-	margin-left: auto;
+	margin: auto;
 }
 
 .product-by img {
@@ -234,11 +234,14 @@ textarea.input-control {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin: 0px 20px;
   }
   
   .loading-message {
 	transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
 	opacity: 0;
+	text-align: center;
+	min-height: 50px;
   }
   
   .slide-in {
