--- a/src/components/Website.css
+++ b/src/components/Website.css
@@ -1,9 +1,23 @@
 .main-container{
     background-color: #f5f5f5;
     min-height: 100vh;
+    /* width: max-content;
+    margin: auto; */
+
+    padding: 24px;
+    position: relative;
+
+  }
+  
+.main-container-1{
+    background-color: #f5f5f5;
+    min-height: 100vh;
     width: max-content;
     margin: auto;
+   
     padding: 24px;
+ 
+
   }
   
   .homePage-container{
@@ -271,9 +285,8 @@
 }
 
   .sidebar {
-    position: absolute;
-    z-index: 20;
     position: fixed;
+    z-index: 20;
     right: 10px;
     top: 10px;
     background: #fff;
@@ -362,11 +375,10 @@
   
 
 .side-drawer {
-    position: fixed;
+     position: fixed; 
+
     top: 10px;
     right: 10px;
-    /* height: 100%; */
-    /* width: 100%; */
     max-width: 400px;
     max-height: 500px;
     background-color: #000;
@@ -396,6 +408,7 @@
     color: white;
     font-size: 16px;
     letter-spacing: 0.5px;
+    width: 90%;
   }
   
   .side-drawer-content {
@@ -446,7 +459,8 @@
     background: #111;
   }
   .popup-container {
-    position: fixed;
+    position: fixed; 
+  
     top:20px;
     right: 20px;
     width: 300px;
@@ -498,22 +512,7 @@
   cursor: not-allowed;
   opacity: 0.5;
 }
-  @keyframes slideIn {
-    from {
-      right: -350px;
-      opacity: 0;
-    }
-    to {
-      right: 20px;
-      opacity: 1;
-    }
-  }
-  
-/* 
-.sortable-item{
-  display: flex;
-  align-items: center;
-} */
+
  .sortable-item {
   display: flex;
   align-items: center;
@@ -539,3 +538,167 @@
     cursor: grab;
     z-index: 1;
   }
+
+  .description-sidebar{
+    background-color: #fff;
+    height: 100%;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 340px;
+    box-sizing: border-box;
+    padding: 30px 20px;
+    box-shadow: 0px 0 6px rgba(0, 0, 0, 0.2);
+    animation: slideInStr 0.3s ease-in-out;
+  }
+  @keyframes slideInStr {
+    from {
+      right: -350px;
+      opacity: 0;
+    }
+    to {
+      right: 0px;
+      opacity: 1;
+    }
+  }
+  
+  .description-sidebar-icon{
+    position: absolute;
+    right: 20px;
+    background-color: #dcdcde;
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+  }
+
+
+  .description-sidebar-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .description-sidebar-title{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .desc-cross-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  .description-sidebar-subtitle{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    margin-bottom: 30px;
+  }
+  .site-brief-info{
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    padding-bottom: 24px;
+    margin-bottom: 24px;
+  }
+  .site-brief-title{
+    letter-spacing: 1.5px;
+    opacity: .5;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 16px;
+    margin-bottom: 12px;
+  }
+  .site-brief-info-items{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
+  .site-brief-info-item{
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+  }
+  .site-label{
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 16px;
+    opacity: .5;
+    flex-grow: 0;
+  }
+  .brief-info-value-div{
+    flex-grow: 1;
+    display: flex;
+    justify-content: end;
+  }
+  .brief-info-value{
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    display: flex;
+  }
+  .desc-title{
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 16px;
+    opacity: .5;
+    margin-bottom: 12px;
+  }
+  .desc-description{
+    font-size: 11px;
+    line-height: 16px;
+    margin-bottom: 5px;
+    opacity: .8;
+    letter-spacing: 0.3px;
+  }
+  .description-bottom{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 4px;
+    align-items: center;
+    background-color: #f5f5f7;
+    padding: 9px 16px;
+    opacity: 1;
+    border-radius: 6px;
+  }
+  .desc-icon{
+    color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .desc-para{
+    font-size: 11px;
+    line-height: 16px;
+    letter-spacing: 0.3px;
+  }
+  .footer-block-site {
+    padding-top: 30px;
+    padding-bottom: 5px;
+  }
+  .footcol-site{
+    width: fit-content;
+    /* margin-top: 20px; */
+  }
+
+  @keyframes slideIn {
+    from {
+      right: -350px;
+      opacity: 0;
+    }
+    to {
+      right: 20px;
+      opacity: 1;
+    }
+  }
+  
