--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
 	min-height: 100vh;
 	background: #f5f5f7;
 	font-family: "Roboto", serif;
+	background-image: url(/body-bg.png);
 }
 
 input,
@@ -18,6 +19,7 @@ textarea {
 	font-family: "Roboto Mono", serif;
 	font-weight: 400;
 	font-style: normal;
+	font-size: 14px;
 }
 
 h1,
