--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,7 @@ textarea.input-control {
 	letter-spacing: 0.5px;
 	display: flex;
 	align-items: center;
-	background: #dcdcde;
+	/* background: #dcdcde; */
 	padding: 5px 20px;
 	border-radius: 25px;
 	margin: auto;
