--- a/src/components/ColorTemplatePage.css
+++ b/src/components/ColorTemplatePage.css
@@ -270,6 +270,7 @@ section.website-customizer-container {
   .section-action-user-container {
   display: flex;
   gap: 16px;
+  margin-bottom: 10px;
 }
 .website-customizer-card-section
   .section-action-container
@@ -673,7 +674,11 @@ section.website-customizer-container {
   text-transform: uppercase;
   color: #00000080;
 }
+.style-picker-container {
+  margin-top: 15px;
+}
 .color-picker-container {
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
 }
@@ -698,7 +703,7 @@ section.website-customizer-container {
   opacity: 0.5;
 }
 .color-picker-container .db-list .color-item.selected {
-  background-color: #f5f5f7;
+	background-color: #dfdfdf;
 }
 .color-picker-container .color-set-container {
   display: flex;
@@ -965,4 +970,38 @@ section.website-customizer-container {
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+.custom-color-container {
+	margin-top: 25px;
+}
+.custom-color-container .title-small{
+  display: block;
+	margin-bottom: 5px;
+}
+.logo-color-theif input {
+  padding: 25px;
+  width: 100%;
+  opacity: 0;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+}
+.logo-color-theif {
+  background: #f7f7f7;
+  border: 2px dashed #ccc;
+  position: relative;
+}
+.logo-color-theif::before {
+	content: "Upload logo to add custom colors.";
+	text-align: center;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 0;
+	font-size: 14px;
 }
